[package]
name = "lv03"
version = "0.1.0"
authors = ["Thomas Niederberger <thomas@niederb.ch>"]
edition = "2021"

license = "MIT OR Apache-2.0"
description = "Conversion between the Swiss coordinate system (LV03/CH1903 or LV95/CH1903+) and WGS84 coordinates"
readme = "README.md"
homepage = "https://github.com/niederb/lv03"
repository = "https://github.com/niederb/lv03"
keywords = ["coordinates", "Switzerland", "Swiss", "navigation", "wgs84"]
categories = ["algorithms"]

[features]
default = []
nav-types-conversion = ["nav-types"]

[dependencies]
nav-types = { version = "0.5.0", optional = true }

[dev-dependencies]
bmp = "0.5"
oorandom = "11.1"
quickcheck = "1.0"
quickcheck_macros = "1.0"
